# night-ninjas-ghost

./: .gitattributes  .gitignore  ARCHITECTURE.md  BRAND.md  CLAUDE.md  DESIGN.md  PHASES.md  PLAN-AI-COACH.md  PLAN-MULTI-ATHLETE.md  PROGRESS.md  README.md  ROADMAP.md  TESTING.md  bundle-manifest.json  bundle-version.json  check.ps1  electron-builder.config.js  eslint.config.mjs  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.claude/agents/: evaluator.md
.claude/hooks/: commit-on-stop.ps1  kill-switch.ps1  kill-switch.sh  steer.ps1  steer.sh
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  desktop.yml  worker.yml
app/: globals.css  layout.tsx
app/(app)/: layout.tsx
app/setup/: layout.tsx
components/calendar/: ninja-loop-section.tsx
components/club-share/: club-page.tsx  club-share-section.tsx  terms-modal.tsx
components/dojo/: dojo-picker.tsx  (+6 more)
data/: shoe-retailers.csv  shoes-database.csv
docs/: ACCESS-SETUP.md  CLUB-SETUP.md  M3-POLISH-GUIDE.md  ONBOARDING.md
electron/: main.ts  preload.ts  tsconfig.json
night-ninjas-shadow-tracker/: ROADMAP.md  bundle-manifest.json  bundle-version.json  check.ps1  package.json
oauth-worker/: club-schema.sql  package-lock.json  package.json  tsconfig.json  wrangler.toml
public/: README.md  _headers
scripts/: check-db.mjs  generate-m3-tokens.mjs  run-migrations.js  sync-db.mjs  sync-schema.mjs
src/: App.tsx  index.css  m3-tokens.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+296 files in other folders)
