[package]
name = "ghost"
version = "0.1.0"
description = "GHOST — Night Ninjas training tracker"
authors = ["rjsmegmpdc"]
edition = "2021"

[lib]
name = "ghost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ghost"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
